gcc/testsuite/rust/rustc/ui/parser/raw/raw-str-unterminated.rs
static s: &'static str =
    r#" string literal goes on
        and on
// { dg-error ".E0748." "" { target *-*-* } .-2 }

